--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,27 @@
 ---
 # tasks file for ansible-role-vmrc
+
+- name: Check if VMRC is already installed
+  stat: 
+    path: /usr/bin/vmrc
+  register: vmrc_installed
+
+- name: Copy over VMRC bundle installer
+  ansible.builtin.copy:
+    src: VMware-Remote-Console-12.0.0-17287072.x86_64
+    dest: /tmp/VMware-Remote-Console-12.0.0-17287072.x86_64
+    owner: root
+    group: root
+    mode: '0755'
+  when: vmware_installed.stat.exists == False
+
+- name: Install VMRC bundle
+  ansible.builtin.shell: env TERM=dumb VMWARE_EULAS_AGREED=yes ./VMware-Remote-Console-12.0.0-17287072.x86_64 --console --required
+  args:
+    chdir: /tmp/
+    creates: /usr/bin/vmrc
+
+- name: Remove VMRC bundle installer
+  ansible.builtin.file:
+    path: /tmp/VMware-Remote-Console-12.0.0-17287072.x86_64
+    state: absent
