--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for ansible-role-vmrc
 
 - name: Check if VMRC is already installed
-  stat: 
+  stat:
     path: /usr/bin/vmrc
   register: vmrc_installed
 
@@ -13,7 +13,7 @@
     owner: root
     group: root
     mode: '0755'
-  when: vmware_installed.stat.exists == False
+    when: vmrc_installed.stat.exists == 0
 
 - name: Install VMRC bundle
   ansible.builtin.shell: env TERM=dumb VMWARE_EULAS_AGREED=yes ./VMware-Remote-Console-12.0.0-17287072.x86_64 --console --required
